[gd_scene load_steps=6 format=3 uid="uid://b64p3bg6pqutj"]

[ext_resource type="Script" path="res://scenes/ui/menu/pause_menu.gd" id="1_cjlbg"]
[ext_resource type="Theme" uid="uid://nonhr1o4s7iq" path="res://resources/main_theme.tres" id="1_xcqqo"]

[sub_resource type="CanvasTexture" id="CanvasTexture_vj5t5"]

[sub_resource type="LabelSettings" id="LabelSettings_0a4bq"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_q7w7j"]
font_size = 32

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xcqqo")
script = ExtResource("1_cjlbg")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
modulate = Color(0.282353, 0.262745, 0.329412, 0.490196)
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = SubResource("CanvasTexture_vj5t5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_right = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.39

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Paused"
label_settings = SubResource("LabelSettings_0a4bq")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="Button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource("1_xcqqo")
text = "RESUME"

[node name="MarginContainer7" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.33

[node name="RestartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource("1_xcqqo")
text = "RESTART
"

[node name="MarginContainer6" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.33

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource("1_xcqqo")
text = "MAIN MENU
"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.33

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource("1_xcqqo")
text = "QUIT"

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.33

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Volume"
label_settings = SubResource("LabelSettings_q7w7j")

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.25

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
